--- a/googleauthenticate/views/profile.ejs
+++ b/googleauthenticate/views/profile.ejs
@@ -18,11 +18,11 @@
     }
     .container {
   background-color: white;
-  border: 7px solid #808080; /* Grey color */
-  border-style: double; /* Double outline */
-  width: 800px; /* Adjust the width as needed */
-  height: 400px; /* Adjust the height as needed */
-  padding: 20px; /* Add padding for content */
+  border: 7px solid #808080; 
+  border-style: double; 
+  width: 800px; 
+  height: 400px; 
+  padding: 20px; 
 }
 
     h1 {
